--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 
 /** GLOBALES **/
@@ -13,21 +13,42 @@ html {
 }
 
 body {
-   font-family: 'Poppins', sans-serif;
+   font-family: 'Lato', sans-serif;
    font-size: 1.6rem; /* 16px como es normalmente por defecto */
 }
 
-.container {
+.contenedor {
    max-width: 120rem;/* 1200px; */
    margin: 0 auto;
 }
 
+h1 {
+   font-size: 3.8rem;
+}
+
+h2 {
+   font-size: 3.4rem;
+}
+
+h3 {
+   font-size: 3rem;
+}
+
+h4 {
+   font-size: 2.6rem;
+}
+
+/** Utilidades **/
+.seccion {
+   margin-top: 2rem;
+   margin-bottom: 2rem;
+}
 
 /** HEADER **/
 .site-header.inicio {
-   min-width: 1200px;
+   min-width: 120rem; /* 1200px */
    height: 100vh;
-   min-height: 60rem;
+   min-height: 60rem; /* 600px */
    background-image: url(../img/header.jpg);
    background-size: cover;
    background-position: center center;
@@ -55,4 +76,29 @@ body {
 
 .navegacion a:last-of-type {
    margin-right: 0;
+}
+
+.contenedor-header {
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+
+.contenedor-header h1 {
+   color: #fff;
+   padding-bottom: 3rem;
+   max-width: 80rem;
+   line-height: 2;
+}
+
+
+/** ICONOS NOSOTROS **/
+.iconos-nosotros {
+   display: flex;
+   justify-content: space-between;
+}
+
+.icono {
+   text-align: center;
 }
