--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;700;800&display=swap');
 
 /** GLOBALES **/
 html {
@@ -13,8 +13,14 @@ html {
 }
 
 body {
-   font-family: 'Lato', sans-serif;
+   font-family: 'Muli', sans-serif;
+   /* font-family: 'Lato', sans-serif; */
    font-size: 1.6rem; /* 16px como es normalmente por defecto */
+   line-height: 1.8;
+}
+
+img {
+   max-width: 100%; /* Para que se ajusten a su contenedor, por que hay imágenes gigantes y ellas nos desmaquetarían todo */
 }
 
 .contenedor {
@@ -38,13 +44,49 @@ h4 {
    font-size: 2.6rem;
 }
 
-/** Utilidades **/
+
+/** ----- UTILIDADES ----- **/
 .seccion {
    margin-top: 2rem;
    margin-bottom: 2rem;
 }
 
-/** HEADER **/
+.fw-400 {
+   font-weight: 400;
+}
+
+.centrar-texto {
+   text-align: center;
+}
+
+.d-block {
+   display: block !important;
+}
+
+
+/** ----- BOTONES ----- **/
+.boton {
+   color: #fff;
+   font-weight: 700;
+   text-decoration: none;
+   font-size: 1.8rem;
+   padding: 1rem 3rem;
+   display: inline-block; /* Por defecto tiene display inline, lo que no nos deja darles margin ni width ni height, por eso lo cambiamos a display inline-block, así toma el tamaño com margenes y paddings incluidos. */
+   margin-top: 3rem;
+   text-align: center;
+}
+
+.boton-amarillo {
+   background-color: #E08709;
+}
+
+.boton-verde { 
+   background-color: #71B100;
+}
+
+
+
+/** ----- HEADER ----- **/
 .site-header.inicio {
    min-width: 120rem; /* 1200px */
    height: 100vh;
@@ -94,11 +136,187 @@ h4 {
 
 
 /** ICONOS NOSOTROS **/
+
+.encabezado-nosotros {
+   font-weight: 400;
+   text-align: center;
+}
+
 .iconos-nosotros {
    display: flex;
    justify-content: space-between;
 }
 
 .icono {
+   padding: 2rem;
    text-align: center;
+}
+
+.icono img {
+   cursor: pointer;
+}
+
+
+/** ANUNCIOS **/
+.contenedor-anuncios {
+   display: flex;
+   justify-content: space-between;
+   /* align-items: end; */
+}
+
+.anuncio {
+   flex-basis: calc(33.3% - 1rem);
+   border: 1px solid #B5B5B5;
+   background-color: #F5F5F5;
+}
+
+.contenido-anuncio {
+   padding: 1rem 2rem 2rem 2rem;
+}
+
+.precio {
+   color: #71B100;
+   font-weight: 700;
+}
+
+.iconos-caracteristicas {
+   list-style: none;
+   display: flex;
+   justify-content: space-around;
+   margin-top: 2rem;
+}
+
+.iconos-caracteristicas li {
+   display: flex;
+}
+
+.iconos-caracteristicas li img {
+   margin-right: 2rem;
+}
+
+
+.ver-todas {
+   display: flex;
+   justify-content: flex-end;
+}
+
+/** ----- CONTACTO-HOME ----- **/
+.imagen-contacto {
+   height: 40rem;
+   background-image: url(../img/encuentra.jpg);
+   background-position: center center;
+   background-size: cover;
+   display: flex;
+   align-items: center;
+}
+
+.contenido-contacto {
+   flex: 1;
+   color: #fff;
+}
+
+.contenido-contacto p {
+   font-size: 1.8rem;
+}
+
+
+/** ----- SECCION INFERIOR ----- **/ 
+.seccion-inferior {
+   display: flex;
+   justify-content: space-between;
+}
+
+.seccion-inferior .blog {
+   flex-basis: 60%;
+}
+
+.seccion-inferior .testimoniales {
+   flex-basis: calc(40% - 2rem);
+}
+
+.entrada-blog {
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 2rem;
+}
+
+.entrada-blog:last-of-type {
+   margin-bottom: 0;
+}
+
+.entrada-blog .imagen {
+   flex-basis: 40%;
+}
+
+.entrada-blog .texto-entrada {
+   flex-basis: calc(60% - 3rem);
+}
+
+.texto-entrada a {
+   color: #000;
+   text-decoration: none;
+}
+
+.texto-entrada h4 {
+   margin-bottom: 2rem;
+}
+
+.texto-entrada h4::after {
+   content: '';
+   display: block;
+   width: 15rem;
+   height: .5rem;
+   background-color: #71B100;
+}
+
+.texto-entrada span {
+   color: #E08709;
+}
+
+
+/** ----- TESTIMONIALES ----- **/
+.testimonial {
+   background-color: #71B100;
+   font-size: 2.4rem;
+   padding: 3rem;
+   color: #fff;
+   border-radius: 2rem;
+}
+
+.testimonial p {
+   text-align: right;
+}
+
+.testimonial blockquote {
+   position: relative;
+   padding-left: 5rem;
+   font-weight: 300;
+}
+
+.testimonial blockquote::before {
+   content: '';
+   background-image: url(../img/comilla.svg);
+   width: 4rem;
+   height: 4rem;
+   position: absolute;
+   top: -1rem;
+   left: -1rem;
+}
+
+
+/** ----- FOOTER ----- **/
+.site-footer {
+   background-color: #333;
+   margin-bottom: 0;
+   margin-top: 5rem;
+}
+
+.contenedor-footer {
+   padding: 3rem 0;
+   display: flex;
+   justify-content: space-between;
+}
+
+.copyright {
+   color: #fff;
 }
